k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: forex-app
  labels:
    name: forex-app
    app: forex-fundamental-data
